# toad

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yml
src/: buffer.rs  config.rs  consts.rs  css.rs  debug.html  element.rs  history.html  home.html  loading.html  main.rs  parsing.rs  settings.html  test.html  utils.rs
