[package]
name = "toad"
version = "0.8.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
regex = "1.11.1"
reqwest = "0.12.23"
tokio = { version = "1.47.1", features = ["rt", "macros", "rt-multi-thread"] }

hamis = { git = "https://github.com/ingobeans/hamis.git", version = "0.1.15" }
image = { version = "0.25.6", default-features = false, features = [
    "bmp",
    "ico",
    "jpeg",
    "png",
    "webp",
] }
